namespace Guardadito.Entity;
public class ReminderType : BaseEntity
{
   public string Name { get; set; }

   /*
   PagoFactura,
   MetaAhorro,
   LimitePrespuesto,
   VencimientoTarjeta
   */
}